--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "rgrjs",
+  "name": "mongotocosmo",
   "version": "1.0.0",
-  "description": "A collection of educational resources about React, GraphQL, and Relay",
+  "description": "Cosmo, React, GraphQL, and Relay",
   "scripts": {
     "start": "./node_modules/.bin/babel-node --presets react,es2015,stage-0 server.js",
     "build": "webpack"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rgrjs/react-graphql-relay-example.git"
+    "url": "git+https://github.com/gustvegas/demo.migrar.mongo.cosmo.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/rgrjs/react-graphql-relay-example/issues"
+    "url": "https://github.com/gustvegas/demo.migrar.mongo.cosmo/issues"
   },
-  "homepage": "https://github.com/rgrjs/react-graphql-relay-example#readme",
+  "homepage": "https://github.com/gustvegas/demo.migrar.mongo.cosmo#readme",
   "dependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.5.1",
